--- a/index.html
+++ b/index.html
@@ -401,8 +401,8 @@
                 </div>
                 <button class="download-btn" type="button" aria-label="Toggle download options for GPT-4o MOD">Download</button>
                 <div class="version-options">
-                    <button type="button" data-link="https://sub2unlock.io/SezDF">⟨⟨⟨DOWNLOAD⟩⟩⟩ | 👤[FREE MODE]</button>
-                    <button class="premium-download-btn" type="button" data-link="https://www.mediafire.com/file/cmmhcq3noeige0g/Super_Touch-9.1.apk/file">⟨⟨⟨DOWNLOAD⟩⟩⟩ | 👑[PREMIUM MODE]</button>
+                    <button type="button" data-link="https://sub2unlock.io/qYaAZ">⟨⟨⟨DOWNLOAD⟩⟩⟩ | 👤[FREE MODE]</button>
+                    <button class="premium-download-btn" type="button" data-link="https://www.mediafire.com/file/m74rowiy72cw2kl/Touch_Responsive.apk/file">⟨⟨⟨DOWNLOAD⟩⟩⟩ | 👑[PREMIUM MODE]</button>
                 </div>
             </div>
         </div>
