--- a/index.html
+++ b/index.html
@@ -389,13 +389,13 @@
         </div>
 
         <div class="download-item" data-name="SUPER TOUCH">
-            <img src="https://gcdnb.pbrd.co/images/AfteWXaHAmiz.jpg?o=1" alt="GPT-4o MOD Image">
+            <img src="https://gcdnb.pbrd.co/images/0AgPJIGaf7vz.jpg?o=1" alt="GPT-4o MOD Image">
             <div class="content">
                 <h2>SUPER TOUCH</h2>
                 <div class="description">
                     <p>TOUCH RESPONSIVE ✅</p>
                     <p>NO DELAY TOUCH ✅</p>
-                    <p>SMOOTH TOUCH ✅</p>
+                    <p>GHOST TOUCH FIX ✅</p>
                     <p>BOOST TOUCH ✅</p>
                     <p>UPDATE : NOT FOUND</p>
                 </div>
